[package]
name = "pplx-bangs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = { version = "1.35.1", features = ["full"] }
urlencoding = "2.1.3"
